rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-22.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name: "template:template_key"
description: "template:template_key"
settings: "template:template_key"
can_be_gap: "template:template_key"
can_be_step: "template:template_key"
marking_notes: "template:template_key"
help_url: "template:template_key"
published: "template:template_key"
extensions:
  chemistry: false
  download_text_file: false
  eukleides: false
  geogebra: false
  graphs: false
  jsx_graph: false
  linear_algebra: false
  linear_codes: false
  optimisation: false
  permutations: false
  polynomials: false
  quantities: false
  random_person: false
  stats: false
  sqlite: false
  text: false
  written_number: false
input_widget:
  type: number
  hint: ~
  correct_answer:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  allow_fractions:
    value: ~
    static: ~
  allowed_notation_styles:
    value: ~
    static: ~

