rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-23.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name:
  template_key: template_key
  default_value: ~
description:
  template_key: template_key
  default_value: ~
settings:
  template_key: template_key
  default_value: ~
can_be_gap:
  template_key: template_key
  default_value: ~
can_be_step:
  template_key: template_key
  default_value: ~
marking_notes:
  template_key: template_key
  default_value: ~
help_url:
  template_key: template_key
  default_value: ~
published:
  template_key: template_key
  default_value: ~
extensions:
  chemistry: "template:template_key"
  download_text_file: "template:template_key"
  eukleides: "template:template_key"
  geogebra: "template:template_key"
  graphs: "template:template_key"
  jsx_graph: "template:template_key"
  linear_algebra: "template:template_key"
  linear_codes: "template:template_key"
  optimisation: "template:template_key"
  permutations: "template:template_key"
  polynomials: "template:template_key"
  quantities: "template:template_key"
  random_person: "template:template_key"
  stats: "template:template_key"
  sqlite: "template:template_key"
  text: "template:template_key"
  written_number: "template:template_key"
input_widget:
  type: radiogroup
  hint:
    value:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    static: false
  correct_answer:
    content:
      nonjmetext§: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  choices:
    value:
      - content:
          nonjmetext§: "file:path/to/file"
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - content:
          nonjmetext§: "template:template_key"
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - content:
          nonjmetext§:
            template_key: template_key
            default_value: ~
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - content: "file:path/to/file"
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - "file:path/to/file"
      - "template:template_key"
      - template_key: template_key
        default_value: ~
    static: false

