rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-26.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
description:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
settings: "template:template_key"
can_be_gap: "template:template_key"
can_be_step: "template:template_key"
marking_notes: "template:template_key"
help_url:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
published: "template:template_key"
extensions: "template:template_key"
input_widget:
  type: radiogroup
  hint:
    value:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    static: ~
  correct_answer:
    content: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  choices:
    value: ~
    static: ~

