rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-3.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
description:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
settings:
  template_key: template_key
  default_value: ~
can_be_gap:
  template_key: template_key
  default_value: ~
can_be_step:
  template_key: template_key
  default_value: ~
marking_notes:
  template_key: template_key
  default_value: ~
help_url:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
published:
  template_key: template_key
  default_value: ~
extensions:
  chemistry:
    template_key: template_key
    default_value: ~
  download_text_file:
    template_key: template_key
    default_value: ~
  eukleides:
    template_key: template_key
    default_value: ~
  geogebra:
    template_key: template_key
    default_value: ~
  graphs:
    template_key: template_key
    default_value: ~
  jsx_graph:
    template_key: template_key
    default_value: ~
  linear_algebra:
    template_key: template_key
    default_value: ~
  linear_codes:
    template_key: template_key
    default_value: ~
  optimisation:
    template_key: template_key
    default_value: ~
  permutations:
    template_key: template_key
    default_value: ~
  polynomials:
    template_key: template_key
    default_value: ~
  quantities:
    template_key: template_key
    default_value: ~
  random_person:
    template_key: template_key
    default_value: ~
  stats:
    template_key: template_key
    default_value: ~
  sqlite:
    template_key: template_key
    default_value: ~
  text:
    template_key: template_key
    default_value: ~
  written_number:
    template_key: template_key
    default_value: ~
input_widget:
  type: string
  hint:
    value:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    static:
      template_key: template_key
      default_value: ~
  correct_answer:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  allow_empty:
    value:
      template_key: template_key
      default_value: ~
    static:
      template_key: template_key
      default_value: ~

