rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-32.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name: ~
description: ~
settings: ~
can_be_gap: ~
can_be_step: ~
marking_notes: ~
help_url: ~
published: ~
extensions:
  chemistry: ~
  download_text_file: ~
  eukleides: ~
  geogebra: ~
  graphs: ~
  jsx_graph: ~
  linear_algebra: ~
  linear_codes: ~
  optimisation: ~
  permutations: ~
  polynomials: ~
  quantities: ~
  random_person: ~
  stats: ~
  sqlite: ~
  text: ~
  written_number: ~
input_widget:
  type: radiogroup
  hint:
    template_key: template_key
    default_value: ~
  correct_answer:
    content:
      nonjmetext§: "template:template_key"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  choices:
    value:
      template_key: template_key
      default_value: ~
    static:
      template_key: template_key
      default_value: ~

